--- a/Global Chess Rankings/admin.html
+++ b/Global Chess Rankings/admin.html
@@ -25,7 +25,7 @@
     <div class="columns mt-2 m-0">
         <div class="field box column ml-2 mr-2">
             <strong class="is-size-5">Add a Game</strong>
-            <input type="date" class="input is-rounded mb-2 mt-2" id="date">
+            <input type="date" class="input mb-2 mt-2" id="date">
             <br>
             <div class="columns mb-0">
                 <div class="column">
@@ -68,32 +68,32 @@
             </div>
             <br>
             <label class="is-centered"><strong>Enter the Number of moves of each type:</strong></label>
-            <div class="columns">
-                <div class="column">
+            <div class="columns mb-0">
+                <div class="column pb-1">
                     <label>White:</label>
-                    <input type="text" class="input is-rounded mb-2 mt-2 is-small" id="brilliantW" placeholder="Brilliant Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="greatW" placeholder="Great Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="bestW" placeholder="Best Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="excellentW" placeholder="Excellent Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="goodW" placeholder="Good Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="bookW" placeholder="Book Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="inaccuracyW" placeholder="Innacuracies">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="mistakeW" placeholder="Mistakes">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="blunderW" placeholder="Blunders">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="missedW" placeholder="Missed Wins">
+                    <input type="text" class="input  mb-2 mt-2 is-small" id="brilliantW" placeholder="Brilliant Moves">
+                    <input type="text" class="input  mb-2 is-small" id="greatW" placeholder="Great Moves">
+                    <input type="text" class="input  mb-2 is-small" id="bestW" placeholder="Best Moves">
+                    <input type="text" class="input  mb-2 is-small" id="excellentW" placeholder="Excellent Moves">
+                    <input type="text" class="input  mb-2 is-small" id="goodW" placeholder="Good Moves">
+                    <input type="text" class="input  mb-2 is-small" id="bookW" placeholder="Book Moves">
+                    <input type="text" class="input  mb-2 is-small" id="inaccuracyW" placeholder="Innacuracies">
+                    <input type="text" class="input  mb-2 is-small" id="mistakeW" placeholder="Mistakes">
+                    <input type="text" class="input  mb-2 is-small" id="blunderW" placeholder="Blunders">
+                    <input type="text" class="input  mb-2 is-small" id="missedW" placeholder="Missed Wins">
                 </div>
-                <div class="column">
+                <div class="column pb-1">
                     <label>Black</label>
-                    <input type="text" class="input is-rounded mb-2 mt-2 is-small" id="brilliantB" placeholder="Brilliant Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="greatB" placeholder="Great Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="bestB" placeholder="Best Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="excellentB" placeholder="Excellent Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="goodB" placeholder="Good Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="bookB" placeholder="Book Moves">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="inaccuracyB" placeholder="Innacuracies">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="mistakeB" placeholder="Mistakes">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="blunderB" placeholder="Blunders">
-                    <input type="text" class="input is-rounded mb-2 is-small" id="missedB" placeholder="Missed Wins">
+                    <input type="text" class="input  mb-2 mt-2 is-small" id="brilliantB" placeholder="Brilliant Moves">
+                    <input type="text" class="input  mb-2 is-small" id="greatB" placeholder="Great Moves">
+                    <input type="text" class="input  mb-2 is-small" id="bestB" placeholder="Best Moves">
+                    <input type="text" class="input  mb-2 is-small" id="excellentB" placeholder="Excellent Moves">
+                    <input type="text" class="input  mb-2 is-small" id="goodB" placeholder="Good Moves">
+                    <input type="text" class="input  mb-2 is-small" id="bookB" placeholder="Book Moves">
+                    <input type="text" class="input  mb-2 is-small" id="inaccuracyB" placeholder="Innacuracies">
+                    <input type="text" class="input  mb-2 is-small" id="mistakeB" placeholder="Mistakes">
+                    <input type="text" class="input  mb-2 is-small" id="blunderB" placeholder="Blunders">
+                    <input type="text" class="input  mb-2 is-small" id="missedB" placeholder="Missed Wins">
                 </div>
             </div>
             <div class="notification is-danger is-light is-hidden" id="invalidNotif">
@@ -102,209 +102,30 @@
             <div class="notification is-success is-light is-hidden" id = "validNotif">
                 Succesful Submission! <strong>Game has been added</strong>
             </div>
-            <div class="control" onclick="addGame()">
+            <div class="control is-flex is-justify-content-end" onclick="addGame()">
                 <button class="button is-primary" id="buttonSubmit">Submit</button>
             </div>
         </div>
         <div class="field box column mr-2">
             <strong class="is-size-5">Add a Player</strong>
-            <input type="text" class="input is-rounded mb-2 mt-2" id="pFirstName" placeholder="First Name">
-            <input type="text" class="input is-rounded mb-2" id="pLastName" placeholder="Last Name">
-            <input type="text" class="input is-rounded mb-2" id="classical" placeholder="Classical Rating">
-            <input type="text" class="input is-rounded mb-2" id="rapid" placeholder="Rapid Rating">
-            <input type="text" class="input is-rounded mb-2" id="blitz" placeholder="Blitz Rating">
+            <input type="text" class="input  mb-2 mt-2" id="pFirstName" placeholder="First Name">
+            <input type="text" class="input  mb-2" id="pLastName" placeholder="Last Name">
+            <input type="text" class="input  mb-2" id="classical" placeholder="Classical Rating">
+            <input type="text" class="input  mb-2" id="rapid" placeholder="Rapid Rating">
+            <input type="text" class="input  mb-2" id="blitz" placeholder="Blitz Rating">
             <div class="notification is-success is-light is-hidden" id = "validPlayer">
                 Succesful Submission! <strong>Player has been added</strong>
             </div>
             <div class="notification is-danger is-light is-hidden" id = "invalidPlayer">
                 One or more fields are <strong>invalid</strong>. Please check all fields to ensure they have valid inputs
             </div>
-            <div class="control" onclick="addPlayer()">
+            <div class="control  is-flex is-justify-content-end" onclick="addPlayer()">
                 <button class="button is-primary mt-1">Submit</button>
             </div>
         </div>
     </div>
 </body>
 
-<script>
-    let tempData = JSON.parse(localStorage.getItem("data"));
-    let tempSeen = JSON.parse(localStorage.getItem("seen"))
-
-    tempData.forEach(player =>{
-        let whitePlayer = document.getElementById("whitePlayer")
-        let blackPlayer = document.getElementById("blackPlayer")
-
-        let option1 = document.createElement('option')
-        option1.setAttribute("value", player.name)
-        option1.textContent = player.name
-        whitePlayer.appendChild(option1)
-
-        let option2 = document.createElement('option')
-        option2.setAttribute("value", player.name)
-        option2.textContent = player.name
-        blackPlayer.appendChild(option2)
-    })
-
-    function addPlayer(){
-        let firstName = document.querySelector('#pFirstName').value;
-        let lastName = document.querySelector('#pLastName').value;
-        let name = firstName.concat(" ", lastName);
-        let classical = document.querySelector('#classical').value;
-        let rapid = document.querySelector('#rapid').value;
-        let blitz = document.querySelector('#blitz').value;
-        if(firstName == ""||lastName == ""||classical == ""||rapid == ""||blitz == ""){
-            let invalid = document.getElementById("invalidPlayer")
-            invalid.classList.remove("is-hidden")
-        }else{
-            let valid = document.getElementById("validPlayer")
-            valid.classList.remove("is-hidden")
-            let id = tempData[tempData.length -1].id;
-            let rank = 0;
-            parseInt(id)
-            id++;
-            let finID = id.toString();
-            tempData.push({
-                name: name,
-                id: finID,
-                classicalRating: classical,
-                rapidRating: rapid,
-                blitzRating: blitz,
-                games: []
-            });
-            let playersString = JSON.stringify(tempData);
-            localStorage.setItem("data", playersString);
-        }
-    }
-
-    function addGame(){
-        let date = document.getElementById('date')
-        let dateValue = date.value;
-        let whitePlayerDIV = document.getElementById('whitePlayer')
-        let blackPlayerDIV = document.getElementById('blackPlayer')
-        let whitePlayer = whitePlayerDIV.options[whitePlayerDIV.selectedIndex].value
-        let blackPlayer= blackPlayerDIV.options[blackPlayerDIV.selectedIndex].value
-
-        let winner = ""
-        if(document.getElementById('whiteWin').checked){
-            winner = "1"
-        }else if(document.getElementById('blackWin').checked){
-            winner = "0"
-        }else if(document.getElementById('stalemate').checked){
-            winner = "-1"
-        }
-
-        let type = document.getElementById('type')
-        let selectedValue = type.options[type.selectedIndex].value
-        let gameType = "";
-        if(selectedValue === "classicalType"){
-            gameType = "classical"
-        }else if(selectedValue === "rapidType"){
-            gameType = "rapid"
-        }else if(selectedValue === "blitzType"){
-            gameType = "blitz"
-        }
-
-        let brilliantW = document.getElementById('brilliantW').value
-        let greatW = document.getElementById('greatW').value
-        let bestW = document.getElementById('bestW').value
-        let excellentW = document.getElementById('excellentW').value
-        let goodW = document.getElementById('goodW').value
-        let bookW = document.getElementById('bookW').value
-        let inaccuracyW = document.getElementById('inaccuracyW').value
-        let mistakeW = document.getElementById('mistakeW').value
-        let blunderW = document.getElementById('blunderW').value
-        let missedW = document.getElementById('missedW').value
-
-        let brilliantB = document.getElementById('brilliantB').value
-        let greatB = document.getElementById('greatB').value
-        let bestB = document.getElementById('bestB').value
-        let excellentB = document.getElementById('excellentB').value
-        let goodB = document.getElementById('goodB').value
-        let bookB = document.getElementById('bookB').value
-        let inaccuracyB = document.getElementById('inaccuracyB').value
-        let mistakeB = document.getElementById('mistakeB').value
-        let blunderB = document.getElementById('blunderB').value
-        let missedB = document.getElementById('missedB').value
-
-        if(brilliantW==""||greatW==""||bestW==""||excellentW==""||goodW==""||bookW==""||inaccuracyW==""||mistakeW==""||blunderW==""||missedW==""||brilliantB==""||bestB==""||greatB==""||excellentB==""||goodB==""||bookB==""||inaccuracyB==""||mistakeB==""||blunderB==""||missedB==""||gameType==""||winner==""||dateValue==""||whitePlayer==blackPlayer){
-            let notif = document.getElementById("invalidNotif")
-            notif.classList.remove("is-hidden")
-        }else{
-            let notif = document.getElementById("validNotif")
-            notif.classList.remove("is-hidden")
-            let additive = parseInt(tempSeen[0])
-            let numID = additive+1
-            let gameID = numID.toString()
-            tempSeen.unshift(gameID);
-
-            tempData.forEach(element => {
-                if(whitePlayer === element.name){
-                    element.games.push({
-                        date: dateValue,
-                        white: whitePlayer,
-                        black: blackPlayer,
-                        winner: winner,
-                        brilliantW: brilliantW,
-                        greatW: greatW,
-                        bestW: bestW,
-                        excellentW: excellentW,
-                        goodW: goodW,
-                        bookW: bookW,
-                        inaccuracyW: inaccuracyW,
-                        mistakeW: mistakeW,
-                        blunderW: blunderW,
-                        missedW: missedW,
-                        brilliantB: brilliantB,
-                        greatB: greatB,
-                        bestB: bestB,
-                        excellentB: excellentB,
-                        goodB: goodB,
-                        bookB: bookB,
-                        inaccuracyB: inaccuracyB,
-                        mistakeB: mistakeB,
-                        blunderB: blunderB,
-                        missedB: missedB,
-                        type: gameType,
-                        id: gameID
-                    })
-                }else if(blackPlayer === element.name){
-                    element.games.push({
-                        date: dateValue,
-                        white: whitePlayer,
-                        black: blackPlayer,
-                        winner: winner,
-                        brilliantW: brilliantW,
-                        greatW: greatW,
-                        bestW: bestW,
-                        excellentW: excellentW,
-                        goodW: goodW,
-                        bookW: bookW,
-                        inaccuracyW: inaccuracyW,
-                        mistakeW: mistakeW,
-                        blunderW: blunderW,
-                        missedW: missedW,
-                        brilliantB: brilliantB,
-                        greatB: greatB,
-                        bestB: bestB,
-                        excellentB: excellentB,
-                        goodB: goodB,
-                        bookB: bookB,
-                        inaccuracyB: inaccuracyB,
-                        mistakeB: mistakeB,
-                        blunderB: blunderB,
-                        missedB: missedB,
-                        type: gameType,
-                        id: gameID
-                    })
-                }
-            });
-            let playersString = JSON.stringify(tempData);
-            localStorage.setItem("data", playersString);
-
-            let seenString = JSON.stringify(tempSeen)
-            localStorage.setItem("seen", seenString)
-        }
-    }
-</script>
+<script src = "admin.js"></script>
 
 </html>
