--- a/Vue Projects/vue3-intro/components-and-props/index.html
+++ b/Vue Projects/vue3-intro/components-and-props/index.html
@@ -4,19 +4,23 @@
 <head>
    <meta charset="UTF-8" />
    <title>Vue Mastery</title>
-   <!-- Import Styles -->
    <link rel="stylesheet" href="./assets/styles.css" />
-   <!-- Import Vue.js -->
    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
 </head>
 
 <body>
    <div id="app">
-      <h1>Product goes here</h1>
+      <div class="nav-bar"></div>
+      <div class="cart">Cart ({{cart}})</div>
+      <product-display :premium="premium"></product-display>
    </div>
 
-   <!-- Import Js -->
    <script src="./main.js"></script>
+   <script src="./conmponents/ProductDisplay.js"></script>
+
+   <script>
+      const mountedApp = app.mount('#app');
+   </script>
 </body>
 
 </html>
