--- a/Vue Projects/vue3-intro/conditional-rendering/index.html
+++ b/Vue Projects/vue3-intro/conditional-rendering/index.html
@@ -21,8 +21,10 @@
             </div>
             <div class="product-info">
                <h1>{{ product }}</h1>
-               <p>In Stock</p>
-               <p>Out of Stock</p>
+               <p v-if="inventory>10">In Stock</p>
+               <p v-else-if="inventory>0">Almost Sold Out</p>
+               <p v-else>Out of Stock</p>
+               <p v-show="onSale">On Sale</p>
             </div>
          </div>
       </div>
