--- a/Vue Projects/vue3-intro/forms-and-v-model/index.html
+++ b/Vue Projects/vue3-intro/forms-and-v-model/index.html
@@ -4,9 +4,7 @@
 <head>
    <meta charset="UTF-8" />
    <title>Vue Mastery</title>
-   <!-- Import Styles -->
    <link rel="stylesheet" href="./assets/styles.css" />
-   <!-- Import Vue.js -->
    <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
 </head>
 
@@ -18,13 +16,12 @@
       <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
    </div>
 
-   <!-- Import App -->
    <script src="./main.js"></script>
 
-   <!-- Import Components -->
    <script src="./components/ProductDisplay.js"></script>
+   <script src="./components/ReviewForm.js"></script>
+   <script src="./components/ReviewList.js"></script>
 
-   <!-- Mount App -->
    <script>
       const mountedApp = app.mount('#app')
    </script>
