--- a/Vue Projects/vue3-intro/attribute-binding/index.html
+++ b/Vue Projects/vue3-intro/attribute-binding/index.html
@@ -4,7 +4,9 @@
 <head>
    <meta charset="UTF-8" />
    <title>Vue Mastery</title>
+   <!-- Import Styles -->
    <link rel="stylesheet" href="./assets/styles.css" />
+   <!-- Import Vue.js -->
    <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
 </head>
 
@@ -16,7 +18,7 @@
          <div class="product-container">
             <div class="product-image">
                <a :href="url">
-                  <img :src="image">
+                  <img :src="image" alt="" srcset="">
                </a>
             </div>
             <div class="product-info">
