--- a/Vue Projects/vue3-intro/creating-vue-app/index.html
+++ b/Vue Projects/vue3-intro/creating-vue-app/index.html
@@ -19,7 +19,7 @@
    <!-- Import Js -->
    <script src="./main.js"></script>
    <script>
-      const mountedApp = app.mount("#app")
+      const mountedApp = app.mount('#app');
    </script>
 </body>
 
