--- a/Vue Projects/vue3-intro/components-and-props/index.html
+++ b/Vue Projects/vue3-intro/components-and-props/index.html
@@ -15,8 +15,9 @@
       <product-display :premium="premium"></product-display>
    </div>
 
+   <!-- Import Js -->
    <script src="./main.js"></script>
-   <script src="./conmponents/ProductDisplay.js"></script>
+   <script src="./components/ProductDisplay.js"></script>
 
    <script>
       const mountedApp = app.mount('#app');
